fixed nav-right sizing on mobile

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1261,7 +1261,7 @@ form.search-form {
   }
 
   .nav-right {
-    width: 50%;
+    width: 65%;
   }
 
   a.button-small {
